test/org/midica/testfiles/failing/eff-func-bool-with-numeric-2.midica
INCLUDE inc/instruments.midica


0: chorus.off()
